# MRA-prototype

./: .bazelrc  .gitignore  CMakeLists.txt  INTEGRATION-BAZEL.md  INTEGRATION-CMAKE.md  INTEGRATION.md  LICENSE  MRA-build.py  MRA-codegen.py  README.md  WORKSPACE.bazel  cmake_build.sh
components/: CMakeLists.txt
components/falcons/: CMakeLists.txt
components/falcons/getball/: BUILD  CMakeLists.txt  FalconsGetball.hpp  datatypes.hpp  dependencies  test.cpp  tick.cpp
components/falcons/getball-fetch/: BUILD  FalconsGetballFetch.hpp  datatypes.hpp  test.cpp  tick.cpp
components/falcons/getball-fetch/interface/: BUILD  Input.proto  Output.proto  Params.proto
components/falcons/getball-fetch/testdata/: kickoff_prepare.json
components/falcons/getball-intercept/: BUILD  FalconsGetballIntercept.hpp  datatypes.hpp  test.cpp  tick.cpp
components/falcons/getball-intercept/interface/: BUILD  Input.proto  Output.proto  Params.proto
components/falcons/getball/interface/: BUILD  Input.proto  Output.proto  Params.proto
components/falcons/getball_fetch/: BUILD  CMakeLists.txt  FalconsGetballFetch.hpp  FalconsGetballFetch_datatypes.hpp  test.cpp  tick.cpp
components/falcons/getball_fetch/interface/: DefaultParams.json  Input.proto
components/falcons/getball_fetch/testdata/: kickoff_prepare.json
components/falcons/getball_intercept/: BUILD  CMakeLists.txt  FalconsGetballIntercept.hpp  FalconsGetballIntercept_datatypes.hpp  test.cpp  tick.cpp
components/falcons/getball_intercept/interface/: Input.proto
components/falcons/localization-vision/: BUILD  FalconsLocalizationVision.hpp  README.md  datatypes.hpp  dependencies  plot.py  test.cpp  tick.cpp
components/falcons/localization-vision/interface/: DefaultParams.json  Input.proto  Local.proto  Output.proto  Params.proto  State.proto
components/falcons/localization-vision/internal/: BUILD.bazel  configurator.cpp  configurator.hpp  determinePosition.cpp  determinePosition.hpp  fieldLut.cpp  fieldLut.hpp  fit.cpp  fit.hpp  floor.cpp  floor.hpp  guessing.cpp  guessing.hpp  linePointDetection.cpp  linePointDetection.hpp  robotFloor.cpp  robotFloor.hpp  solver.cpp  solver.hpp
components/falcons/localization-vision/test/: .gitignore  BUILD  plot.py  protobuf2python.py  tune.cpp  tuningtool.cpp  tuningtool.hpp  wrap2.cpp  wrap2.hpp
components/falcons/localization-vision/testdata/: test1_perfect_fit.json  test2_shift_xy.json  test3_grabs_r5_20191219_210335_bad_init.json
components/falcons/localization_vision/: BUILD  CMakeLists.txt  FalconsLocalizationVision.hpp  FalconsLocalizationVision_datatypes.hpp  README.md  dependencies  test.cpp  tick.cpp
components/falcons/localization_vision/interface/: DefaultParams.json  Local.proto  ParamsAmbitionChallenge.json  State.proto
components/falcons/localization_vision/internal/: BUILD.bazel  fit.cpp  fit.hpp  floor.cpp  floor.hpp  guessing.hpp  solver.cpp  solver.hpp  tracker.cpp  tracker.hpp
components/falcons/localization_vision/test/: BUILD  common.py  gui.py  gui_config.py  gui_opencv.py  gui_parameters.py  gui_sliders.py  parameters.py  plot.py  protobuf2python.py  pybind_ext.cpp  tracing.py  tune.cpp  tune.py  tuningparam.hpp  tuningtool.hpp  wrap2.cpp
components/falcons/test_mra_logger/: BUILD  CMakeLists.txt  FalconsTestMraLogger.hpp  FalconsTestMraLogger_datatypes.hpp  dependencies  test.cpp  tick.cpp
components/falcons/test_mra_logger/interface/: Input.proto  (+2 more)
components/falcons/trajectory-generation/: BUILD  FalconsTrajectoryGeneration.hpp  datatypes.hpp  dependencies  test.cpp  tick.cpp  trajectory.py
components/falcons/trajectory_generation/: BUILD  CMakeLists.txt  FalconsTrajectoryGeneration.hpp  README.md  datatypes.hpp  tick.cpp  trajectory.py
components/falcons/velocity-control/: BUILD  FalconsVelocityControl.hpp  README.md  datatypes.hpp  dependencies  test.cpp  tick.cpp
components/falcons/velocity_control/: BUILD  CMakeLists.txt  FalconsVelocityControl.hpp  FalconsVelocityControl_datatypes.hpp  README.md  test.cpp  tick.cpp
components/robotsports/: CMakeLists.txt
components/robotsports/getball-fetch/: BUILD  README.adoc  RobotSportsGetballFetch.hpp  RobotsportsGetballFetch.hpp  datatypes.hpp  test.cpp  tick.cpp
components/robotsports/getball-intercept/: BUILD  README.adoc  RobotsportsGetballIntercept.hpp  datatypes.hpp  test.cpp  tick.cpp
components/robotsports/getball_fetch/: BUILD  CMakeLists.txt  README.adoc  RobotsportsGetballFetch.hpp  RobotsportsGetballFetch_datatypes.hpp  test.cpp  tick.cpp
components/robotsports/getball_intercept/: BUILD  CMakeLists.txt  README.adoc  RobotsportsGetballIntercept.hpp  RobotsportsGetballIntercept_datatypes.hpp  test.cpp  tick.cpp
components/robotsports/local_ball_tracking/: CMakeLists.txt
components/robotsports/proof-is-alive/: BUILD  RobotsportsProofIsAlive.hpp  datatypes.hpp  test.cpp  tick.cpp
components/robotsports/proof_is_alive/: BUILD  CMakeLists.txt  RobotsportsProofIsAlive.hpp  datatypes.hpp  dependencies  test.cpp  tick.cpp
components/robotsports/velocity-control/: BUILD  README.md  RobotsportsVelocityControl.hpp  datatypes.hpp  dependencies  test.cpp  tick.cpp
datatypes/: ActionResult.proto  BUILD  Ball.proto  CMakeLists.txt  CvMat.proto  Logging.proto  Obstacle.proto  Player.proto  Point.proto  PosVel.proto  Pose.proto  Shapes.proto  Target.proto  WorldState.proto
libraries/: CMakeLists.txt
libraries/geometry/: BUILD  CMakeLists.txt  angles.cpp  angles.hpp  clipping.cpp  clipping.hpp  geometry.cpp  geometry.hpp  point.cpp  point.hpp  pose.cpp  pose.hpp  position.cpp  position.hpp  test-pose.cpp  test-position.cpp  tmp_vector2d.hpp  velocity.cpp  velocity.hpp
libraries/logging/: BUILD  CMakeLists.txt  MRA_logger.cpp  MRA_logger.hpp  backend.cpp  backend.hpp  check_logfolder.py  context.cpp  context.hpp  control.cpp  control.hpp  frontend.hpp  levels.hpp  logdebug.hpp  logging.cpp  logging.hpp  logtick.hpp  macromap.h  macros.hpp  spdlogformatter.hpp
libraries/opencv_utils/: BUILD  opencv_utils.cpp  opencv_utils.hpp
libraries/reflexxes/: BUILD  CMakeLists.txt  README.md
(+157 files in other folders)
