workspace(name = "MRA")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Google protobuf
# https://protobuf.dev/
http_archive(
    name = "com_google_protobuf",
    sha256 = "4e176116949be52b0408dfd24f8925d1eb674a781ae242a75296b17a1c721395",
    strip_prefix = "protobuf-23.3",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/refs/tags/v23.3.tar.gz"],
    # note: on Ubuntu20, opencv DNN libraries depend on an older conflicting protobuf version
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

# GRPC, for proto rules.
# https://grpc.io/
# For a related discussion of the pro/cons of various open-source py proto rule
# repositories, see b/189457935.
http_archive(
    name = "com_github_grpc_grpc",
    sha256 = "9a273c49ec22a0d29376a32c158deefce6d3569ac9773e5a5376608d62cdf8a0",
    strip_prefix = "grpc-1.57.0",
    urls = ["https://github.com/grpc/grpc/archive/v1.57.0.zip"],
)

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()

# JSON
# https://github.com/nlohmann/json
http_archive(
    name = "nlohmann_json",
    build_file = "//dependencies/bazel:BUILD.nlohmann_json",
    sha256 = "b1b92b169e42b5dc2a51b644ba3b3a414e2451d580331d43801244c7e863f060",
    strip_prefix = "json-a6ee8bf9d94ef783f21f955d4125d5f3924d2c8e",
    urls = ["https://github.com/nlohmann/json/archive/a6ee8bf9d94ef783f21f955d4125d5f3924d2c8e.tar.gz"],
    workspace_file_content = 'workspace(name = "nlohmann_json")',
)

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
git_repository(
    name = "fmt",
    branch = "master",
    remote = "https://github.com/fmtlib/fmt",
    patch_cmds = [
        "mv support/bazel/.bazelversion .bazelversion",
        "mv support/bazel/BUILD.bazel BUILD.bazel",
        "mv support/bazel/WORKSPACE.bazel WORKSPACE.bazel",
    ],
)

# spdlog
http_archive(
    name = "gabime_spdlog",
    url = "https://github.com/gabime/spdlog/archive/v1.11.0.tar.gz",
    strip_prefix = "spdlog-1.11.0",
    build_file = "//dependencies/bazel:BUILD.gabime_spdlog",
    sha256 = "ca5cae8d6cac15dae0ec63b21d6ad3530070650f68076f3a4a862ca293a858bb",
)

# gtest
# https://github.com/google/googletest
http_archive(
    name = "com_google_googletest",
    sha256 = "0fb00ff413f6b9b80ccee44a374ca7a18af7315aea72a43c62f2acd1ca74e9b5",
    strip_prefix = "googletest-f13bbe2992d188e834339abe6f715b2b2f840a77",
    urls = [
        "https://github.com/google/googletest/archive/f13bbe2992d188e834339abe6f715b2b2f840a77.tar.gz",
    ],
)

